svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: xyz-service
spec:
  selector:
    app: xyz
  type: ClusterIP 
  ports:
  - protocol: TCP
    port: 8080 
    targetPort: 8080
