ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xyz
  namespace: xyz
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app: xyz
spec:
  ingressClassName: nginx
  rules:
  - host: "xyz-test.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name:  xyz-service
            port:
              number: 8080
